manifests/ext-svc-httpbin.yml
kind: Service
apiVersion: v1
metadata:
  name: ext-httpbin
  annotations:
    konghq.com/plugins: viz-rate-limit
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ExternalName
  externalName: httpbin.org
