manifests/ext-ing-httpbin.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ext-bin
spec:
  rules:
  - host: ext-bin.org
    http:
      paths:
      - backend:
          serviceName: ext-httpbin
          servicePort: 80
